Fix window size

--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:SurfVpnClientTest1.ViewModels"
         mc:Ignorable="d"
-        Title="Top Vpn Servers" MaxHeight="525" MaxWidth="350" MinHeight="525" MinWidth="350"
+        Title="Top Vpn Servers" MaxHeight="520"
         Background="#23242A" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow"  AllowsTransparency="False"
-        MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        MouseLeftButtonDown="Window_MouseLeftButtonDown" Width="354">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
