--- a/SurfVpnClientTest1/Views/HomeView.xaml
+++ b/SurfVpnClientTest1/Views/HomeView.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SurfVpnClientTest1.Views"
       xmlns:vm="clr-namespace:SurfVpnClientTest1.ViewModels"
       mc:Ignorable="d" 
-      MaxHeight="525" MaxWidth="350" MinHeight="525" MinWidth="350">
+      >
     <UserControl.DataContext>
         <vm:HomeViewModel/>
     </UserControl.DataContext>
@@ -23,8 +23,8 @@
             </Grid.ColumnDefinitions>
 
             <!-- Subscription Section -->
-            <StackPanel Grid.Row="1" Margin="24,0,24,0" VerticalAlignment="Top">
-                <TextBlock Text="SUBSCRIPTION NO:" Foreground="#B0B0B0" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,5"/>
+            <StackPanel Grid.Row="1" Margin="10,10,10,10" VerticalAlignment="Center">
+                <TextBlock HorizontalAlignment="Stretch" Text="SUBSCRIPTION NO:" Foreground="#B0B0B0" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,0"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -35,10 +35,11 @@
                              Content="{Binding SubscriptionId}"
                              Background="#292A30"
                              Foreground="White"                                                          
-                             FontSize="16"
-                             Padding="10,4"
-                             Margin="0,0,16,0"
+                             FontSize="14"
+                             Padding="10"
+                             Margin="0,0,0,0"
                              Height="36"
+                             HorizontalAlignment="Stretch"
                              VerticalContentAlignment="Center"
                              HorizontalContentAlignment="Left"
                              Style="{x:Null}"/>
@@ -46,7 +47,7 @@
             </StackPanel>
 
             <!-- Server Selection and Actions -->
-            <StackPanel Grid.Row="2" Margin="24,10,24,0" Orientation="Horizontal" VerticalAlignment="Top" Height="40">
+            <StackPanel Grid.Row="2" Margin="10,10,0,0" Orientation="Horizontal" VerticalAlignment="Top" Height="40">
                 <ComboBox Name="ServersDropDown"
                           ItemsSource="{Binding ConnectionProfiles, Mode=OneWay}"
                           SelectedItem="{Binding SelectedConnectionProfile, Mode=TwoWay}"
@@ -76,10 +77,12 @@
             </StackPanel>
 
             <!-- Connect Button -->
-            <Button Grid.Row="4"
+            <!-- Statistics Panel -->
+            <StackPanel Margin="10,10,10,10" Grid.Row="5" Background="#23242A">
+                <Button Grid.Row="4"
                     Content="{Binding ConnectButtonText, Mode=OneWay}"
                     FontSize="18"
-                    Margin="24,16,24,0"
+                    Margin="0,0,0,0"
                     Background="#007ACC"
                     Foreground="White"
                     BorderBrush="#007ACC"
@@ -91,9 +94,6 @@
                     Command="{Binding ConnectCommand}"
                     Cursor="Hand"
                     />
-
-            <!-- Statistics Panel -->
-            <StackPanel Grid.Row="5" Margin="24,16,24,24" Background="#23242A">
                 <Separator Margin="0,0,0,16" Background="#393A40" Height="1"/>
                 <TextBlock Text="STATISTICS" FontSize="18" FontWeight="Bold" Foreground="White" Margin="0,0,0,10"/>
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
