--- a/SurfVpnClientTest1/Views/SubscriptionView.xaml
+++ b/SurfVpnClientTest1/Views/SubscriptionView.xaml
@@ -21,7 +21,7 @@
 
             <!-- Header with Icon -->
             <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,30,0,0" Width="300">
-                <Label Content="Subscription Setup"
+                <Label Content="Welcome to Top Vpn Servers"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    FontSize="20"
@@ -33,7 +33,7 @@
 
             <!-- Save Panel -->
             <StackPanel Grid.Row="1" Margin="24,0,24,0" VerticalAlignment="Top" Background="#23242A">
-                <TextBlock Text="Enter your Subscription Id" Foreground="#B0B0B0" FontSize="12" Margin="0,0,0,2"/>
+                <TextBlock Text="Please enter your Subscription Number" Foreground="#B0B0B0" FontSize="12" Margin="0,0,0,2"/>
                 <TextBox
                     x:Name="SubscriptionIdTextBox"
                     Text="{Binding SubscriptionId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -59,6 +59,22 @@
                     Padding="16,0"
                     Height="36"
                     Cursor="Hand"/>
+
+                <TextBlock HorizontalAlignment="Center" Margin="0,12,0,0">
+                    <Hyperlink 
+                        NavigateUri="https://www.topvpnservers.com/servers"
+                        RequestNavigate="Hyperlink_RequestNavigate">
+                        Find your subscription Number
+                    </Hyperlink>
+                </TextBlock>
+
+                <TextBlock HorizontalAlignment="Center" Margin="0,12,0,0">
+                    <Hyperlink 
+                        NavigateUri="https://www.topvpnservers.com/Account/Register"
+                        RequestNavigate="Hyperlink_RequestNavigate">
+                        Register a new account
+                    </Hyperlink>
+                </TextBlock>
             </StackPanel>
 
             <StackPanel Grid.Row="2" Margin="24,0,24,0" VerticalAlignment="Center">
