--- a/SurfVpnClientTest1/Views/HomeView.xaml
+++ b/SurfVpnClientTest1/Views/HomeView.xaml
@@ -5,8 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SurfVpnClientTest1.Views"
       xmlns:vm="clr-namespace:SurfVpnClientTest1.ViewModels"
+      xmlns:conv="clr-namespace:SurfVpnClientTest1.Converters"
       mc:Ignorable="d" 
       >
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <conv:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+    </UserControl.Resources>
     <UserControl.DataContext>
         <vm:HomeViewModel/>
     </UserControl.DataContext>
@@ -80,7 +85,6 @@
             <!-- Statistics Panel -->
             <StackPanel Margin="10,10,10,10" Grid.Row="5" Background="#23242A">
                 <Button Grid.Row="4"
-                    Content="{Binding ConnectButtonText, Mode=OneWay}"
                     FontSize="18"
                     Margin="0,0,0,0"
                     Background="#007ACC"
@@ -93,7 +97,11 @@
                     FontWeight="Bold"
                     Command="{Binding ConnectCommand}"
                     Cursor="Hand"
-                    />
+                    Content="{Binding ConnectButtonText}"
+                    IsEnabled="{Binding IsBusy, Converter={StaticResource InverseBooleanConverter}, ConverterParameter=False}"
+                    >
+                </Button>
+                <ProgressBar Height="10" HorizontalAlignment="Stretch" IsIndeterminate="True"  Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 <Separator Margin="0,0,0,16" Background="#393A40" Height="1"/>
                 <TextBlock Text="STATISTICS" FontSize="18" FontWeight="Bold" Foreground="White" Margin="0,0,0,10"/>
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
